  * Use ?= for some variables declarations
  * Remove the hardcoded declarations of llvm version in debian/rules
  * add /usr/lib/cuda to the CUDA toolkit search paths
    Thanks to Andreas Beckmann for the patch (Closes: #882505) (LP: #1706326)
  * Fix the fix-scan-view-path.diff path (Closes: #885827)
  * Move libomp-dev from Suggests to Recommends (Closes: #882781)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 11 Feb 2018 00:01:50 +0100

llvm-toolchain-4.0 (1:4.0.1-8) unstable; urgency=medium

  [ Ximin Luo ]
  * Backport some patches (originally from rust, and upstreamed) to fix two
    failing tests in rustc.

  [ Sylvestre Ledru ]
  * Try to fix the mipsel FTBFS (Closes: #877567)
    I am trying the first option from the bug:
    - gsplit-dward on 32 bits archs
    - -g everywhere
    Many thanks to Adrian Bunk for that

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 18 Oct 2017 16:37:25 +0200

llvm-toolchain-4.0 (1:4.0.1-7) unstable; urgency=medium

  * Force the deactivation of ocaml until the transition is done
  * Standards-Version: 4.1.0

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 13 Oct 2017 21:22:54 +0200

llvm-toolchain-4.0 (1:4.0.1-6) unstable; urgency=medium

  * Remove the -Wl option to call gold instead of the normal linker
    (Closes: #876787)
  * For now, lld doesn't generate shared libs. Removing the files
    (Closes: #857653)
  * Add the missing lldb symlinks (Closes: #872237)

  [ Gianfranco Costamagna ]
  * Fixup previous upload, adding -NDEBUG to build flags,
    lost in the -g -> -g1 switch

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Oct 2017 15:24:14 +0200

llvm-toolchain-4.0 (1:4.0.1-5) unstable; urgency=medium

  * Backport of an arm patch for rust.
    https://bugs.llvm.org/show_bug.cgi?id=32379
    (Closes: #876072)

  [ Matthias Klose ]
  * Link with --no-keep-files-mapped --no-map-whole-files when using gold.
  * Fix sanitizer build failure with glibc-2.26.